# tlusr-scraper-playground

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/articles/: route.ts
app/api/articles/[id]/: route.ts
app/api/configs/: route.ts
app/api/status/: route.ts
app/articles/: page.tsx  workspace.tsx
app/articles/[id]/: page.tsx
app/configs/: page.tsx  workspace.tsx
app/docs/: page.tsx
app/pipeline/: page.tsx
components/articles/: article-card.tsx  article-detail.tsx
components/configs/: config-viewer.tsx
components/dashboard/: queue-stats.tsx  recent-articles.tsx  system-metrics.tsx
components/layout/: site-header.tsx
components/pipeline/: pipeline-node.tsx  pipeline-visualizer.tsx  stage-details-panel.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  separator.tsx  tabs.tsx  tooltip.tsx
lib/: pipeline-nodes.ts  server-data.ts  types.ts  utils.ts
